# lab3

./: Block.h  BlockDescErr.h  BlockFactory.cpp  BlockFactory.h  BlockMaker.h  CMakeLists.txt  Dump.cpp  Dump.h  Grep.cpp  Grep.h  IBlockMaker.h  NumOfArgs.h  OpenFile.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  TooManyMakers.h  UnrecognizedKey.h  WorkflowException.h  WorkflowExecutor.cpp  WorkflowExecutor.h  WorkflowParser.cpp  WorkflowParser.h  WriteFile.cpp  WriteFile.h  main.cpp
